--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "rnutilshooks",
   "version": "0.1.0",
   "license": "MIT",
   "main": "dist/index.js",
@@ -13,25 +14,19 @@
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
-    "test": "tsdx test",
+    "test": "jest --coverage",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
   "peerDependencies": {},
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
-  },
   "prettier": {
     "printWidth": 80,
     "semi": true,
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "rnutilshooks",
   "author": "Eddie",
   "module": "dist/rnutilshooks.esm.js",
   "size-limit": [
@@ -45,11 +40,22 @@
     }
   ],
   "devDependencies": {
+    "@babel/preset-react": "^7.22.5",
     "@size-limit/preset-small-lib": "^8.2.6",
-    "husky": "^8.0.3",
+    "babel-jest": "^29.6.1",
+    "jest": "^29.6.1",
     "size-limit": "^8.2.6",
+    "ts-jest": "^29.1.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.6.0",
     "typescript": "^5.1.6"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    }
+  },
+  "preset": {
+    "^.+\\.jsx?$": "@babel/preset-react"
   }
 }
