--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
   "devDependencies": {
     "@babel/preset-react": "^7.22.5",
     "@size-limit/preset-small-lib": "^8.2.6",
+    "@types/react": "^18.2.15",
     "babel-jest": "^29.6.1",
     "jest": "^29.6.1",
+    "react": "^18.2.0",
     "size-limit": "^8.2.6",
     "ts-jest": "^29.1.1",
     "tsdx": "^0.14.1",
@@ -57,5 +59,9 @@
   },
   "preset": {
     "^.+\\.jsx?$": "@babel/preset-react"
+  },
+  "dependencies": {
+    "@testing-library/react-hooks": "^8.0.1",
+    "react-test-renderer": "^18.2.0"
   }
 }
