--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rnutilshooks",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -62,6 +62,7 @@
   },
   "dependencies": {
     "@testing-library/react-hooks": "^8.0.1",
+    "moment": "^2.29.4",
     "react-test-renderer": "^18.2.0"
   }
 }
